--- a/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
+++ b/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
@@ -1020,7 +1020,7 @@
                             <h3 id="Workspaces" class="section-title">e) Workspaces</h3>
                             <p>
                                 HEAL Platform workspaces are secure data analysis environments in the cloud that can access data from one or more data resources. By default, Workspaces include Jupyter notebooks, Python and RStudio, but can be configured to host virtually any application,
-                                including analysis workflows, data processing pipelines, or data visualization apps.
+                                including analysis workflows, data processing pipelines, or data visualization apps. In order to launch a workspace, users will need to request a Gen3 workspace account at <a href="https://healportal.org/login/">"https://healportal.org/"</a>.  There are two methods to support workspaces.  Grant funded accounts paid for your institution (STRIDES grant) or a STRIDES credit account supported by the NIH initiative.  In either case, it may take several days for your account to be approved.
                             </p>
                             <p>
                                 <span style="font-weight: bold;">New to Jupyter?</span> Learn more about the popular tool for data scientists on <a href="https://jupyter.org/">Jupyter.org</a> (disclaimer: CTDS is not responsible for the content).
@@ -1030,12 +1030,12 @@
                             <h4 id="GuidelineToGetStarted" class="section-title">Guideline to get started</h4>
                             <ol>
                                 <li>
-                                    Users need to log in via <a href="https://healdata.org/login">healdata.org/login</a> to access workspaces.
+                                    Users need to log in via <a href="https://healdata.org/login">healdata.org/login</a> to access workspaces and link their funded account from <a href="https://healportal.org/">"https://healportal.org"</a>
                                 </li> <br>
                                 <li>
                                     After navigating to <a href="https://healdata.org/workspace">healdata.org/workspace</a>, users will discover a list of pre-configured virtual machine (VM) images, as shown below.
                                     <br> <br>
-                                    <img class="drop-shadow" src="img/workspace_flavors.png" alt="Workspace_flavors" style="width:80%">
+                                    <img class="drop-shadow" src="img/workspace_flavors_new.png" alt="Workspace_flavors" style="width:80%">
                                     <figcaption style="width:100%">
                                         Available workspaces on the HEAL Platform (top). Users may need to link their accounts from other repositories (bottom; click <a href="#LinkingAccessTo">here to see
                                             how</a>).
@@ -1050,17 +1050,17 @@
                                         <span style="font-weight: bold">(Generic, User-licensed) Stata Notebook</span>: Choose this VM if you are familiar with STATA-based data analysis. This notebook requires a STATA license.
                                     </li>
                                     <li>
-                                        <span style="font-weight: bold">Tutorial Notebooks</span>: Explore our Jupyter Notebook tutorials written in Python or RStudio, which pull data from various sources of the HEAL Data Ecosystem to leverage statistical
+                                        <span style="font-weight: bold">Tutorial Notebook</span>: Explore our Jupyter Notebook tutorials written in Python or RStudio, which pull data from various sources of the HEAL Data Ecosystem to leverage statistical
                                         programs and data analysis tools. <br><br> All interactive tutorial notebooks can be also found as
                                         <a href="https://healdata.org/resource-browser">static version on the
                                             Notebook Browser tab</a>; read more in the section <a href="#StaticNotebooks">"Example Analysis"</a>.
                                         <br> <br> Feel free to edit and experiment with this collection of notebooks. They are your personal copies! <br><br>
                                         <ul>
                                             <li>
-                                                <em>Notebooks in Python</em>: (1) BACPAC Synthetic Data Analysis, (2) JCOIN Tracking Opioid Stigma, (3) Opioid Overdose Trajectories, (4) Opioid Prevalence And Overdoses
+                                                <em>Notebooks in Python</em>: (1) BACPAC Synthetic Data Analysis, (2) JCOIN Tracking Opioid Stigma, (3) Opioid Overdose Trajectories, (4) Opioid Prevalence And Overdoses, (5) Visualizing Changes in Opioid Treatment Policy, (6) Rates of Opioid Overdose Deaths and Covid-19 in 2020
                                             </li>
                                             <li>
-                                                <em>Notebooks in RStudio</em>: (1) Opioid Environment Toolkit and OEPS
+                                                <em>Notebooks in RStudio</em>: (1) Opioid Environment Toolkit and OEPS, (2) JCOIN Medication for Opioid Use Disorder (MOUD Accessibility Analysis
                                             </li>
                                         </ul>
                                     </li>
