--- a/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
+++ b/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
@@ -1827,6 +1827,11 @@
                                     <a href="#Discovery">here</a>. <br><br>
                                 </li>
                                 <li>
+                                    <span style="font-weight: bold;">Do I need to store my data in a particular
+                                        location to participate in the HEAL platform? </span><br><br> You must store your data in a HEAL-approved repository. A HEAL-approved repository is a data repository that is
+                                    NIH-approved and ideally has an API for metadata and data permissions calls. <br><br> To help HEAL investigators in the repository selection process, the HEAL Data Stewards at RENCI/RTI have developed <a href="https://docs.google.com/document/d/1mC7BUoLocOCfLr60MV4IModuy9KIrutSq2Ducdoapmo/">Repository Selection Criteria</a> and identified a number of recommended repositories. <br></br> If you have questions regarding costs associated with data storage in HEAL-approved repositories, please reach out to <a href="mailto:HEALstewards@renci.org">RENCI</a> for further questions on this topic. <br></br>
+                                </li>                                
+                                <li>
                                     <span style="font-weight: bold;">How and where can I see if I have access to a
                                         study? </span><br><br> Clicking on an individual study on the Discovery Page will show in the top right corner if they are accessible to the user. To see all studies users have
                                     access to, users should navigate to the Discovery Page and select “Data Availability” - Available”. More information
@@ -1841,21 +1846,6 @@
                                     <span style="font-weight: bold;">The profile page says I have access but I don’t see
                                         it on the Discovery Page. </span><br><br> Please contact our <a href="mailto:heal-support@datacommons.io">help
                                         desk</a>.<br><br>
-                                </li>
-                                <li>
-                                    <span style="font-weight: bold;">Do I need to store my data in a particular
-                                        location, repository, or
-                                        database in to participate in the HEAL platform? </span><br><br> You must store your data in a HEAL-approved repository. A HEAL-approved repository is a data repository that is
-                                    NIH-approved AND positively has an API for metadata, data, and data permissions calls. <br><br>
-                                </li>
-                                <li>
-                                    <span style="font-weight: bold;">How do I find a HEAL-approved repository in which
-                                        to store my data? </span><br><br> Please reach out to <a href="mailto:HEALstewards@renci.org">RENCI</a> for further questions on this topic. <br><br>
-                                </li>
-                                <li>
-                                    <span style="font-weight: bold;">Are there costs that will be the responsibility of
-                                        individual investigators associated with data storage in a HEAL-approved
-                                        repository now and in the future? </span><br><br> Please reach out to <a href="mailto:HEALstewards@renci.org">RENCI</a> for further questions on this topic. <br><br>
                                 </li>
                                 <li>
                                     <span style="font-weight: bold;">I would like to download data files from a specific
