--- a/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
+++ b/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
@@ -1839,8 +1839,7 @@
                                 </li>
                                 <li>
                                     <span style="font-weight: bold;">I do not have access to a specific study, how can I
-                                        get access? </span><br><br> RENCI/RTI (Renaissance Computing Institute) at the University of North Carolina at Chapel Hill establishes and manages data access contacts over all
-                                    data contributors/sources. To request access to controlled data, users should contact RENCI/RTI at HEALstewards@renci.org. <br><br>
+                                        get access? </span><br><br> Access to controlled data are managed by the hosting data repository. Please refer to guidance provided by the hosting data repository for more information on how to request access to specific study data. <br><br>
                                 </li>
                                 <li>
                                     <span style="font-weight: bold;">The profile page says I have access but I don’t see
