--- a/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
+++ b/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
@@ -248,7 +248,7 @@
                         </figcaption>
 
                         <p> 
-                            For more information from NIH regarding public access and data sharing, visit https://heal.nih.gov/about/public-access-data 
+                            For more information from NIH regarding public access and data sharing, visit <a href=https://heal.nih.gov/about/public-access-data>https://heal.nih.gov/about/public-access-data</a>. 
                     </p>
                     
                         <h2 id="HowToGetStarted" class="section-title">3. How to get started</h2>
