heal doc changes

--- a/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
+++ b/qa-heal.planx-pla.net/dashboard/Public/documentation/index.html
@@ -518,7 +518,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a href="#Workspaces" style="background-image: url('img/workspace_flavors.png');"></a>
+                                    <a href="#Workspaces" style="background-image: url('img/workspaces_new_2.png');"></a>
                                     <div class="details">
                                         <h6><a href="#Workspaces">Workspaces</a></h6>
                                         <p class="image-author">Access data across multiple resources and perform analyses in a secure, cloud-based environment.</p>
@@ -1007,7 +1007,7 @@
                                     <code>/pd/data/healdata.org/</code> folder.<br><br> - Please also note, that the workspace mounts up to a
                                     <span style="font-weight: bold">maximum of 5 different manifests</span> while the workspace is running but shows only the latest exported manifest in a newly launched workspace.
                                     <br><br> - Terminating the workspace will result in the
-                                    <span style="font-weight: bold">loss of all but the latests
+                                    <span style="font-weight: bold">loss of all but the latest
                                         manifest</span>.<br><br>
                                 </blockquote>
 
@@ -1035,7 +1035,7 @@
                                 <li>
                                     After navigating to <a href="https://healdata.org/workspace">healdata.org/workspace</a>, users will discover a list of pre-configured virtual machine (VM) images, as shown below.
                                     <br> <br>
-                                    <img class="drop-shadow" src="img/workspace_flavors_new.png" alt="Workspace_flavors" style="width:80%">
+                                    <img class="drop-shadow" src="img/workspaces_new_2.png" alt="Workspace_flavors" style="width:80%">
                                     <figcaption style="width:100%">
                                         Available workspaces on the HEAL Platform (top). Users may need to link their accounts from other repositories (bottom; click <a href="#LinkingAccessTo">here to see
                                             how</a>).
@@ -1485,6 +1485,49 @@
                                         Python
                                     </td>
                                 </tr>
+                                    <td>
+                                      Changes in Opioid Treatment Policy During COVID-19
+                                    </td>
+                                    <td>
+                                       (1) Increasing Access to Buprenorphine and Methadone During COVID-19  <br>
+                                       (2) COVID-19 State Medicaid Waivers for Substance Use Disorder Treatment <br>
+                                       (3) COVID-19 Mitigation Laws at State Correctional Facilities Relating to Opioid Use Disorder Treatment -
+                                    </td>
+                                    <td>
+                                      (1) 6169fccdf5f53c83528b456c <br>
+                                      (2) 6169fbf6f5f53c46528b4568 <br>
+                                      (3) 6169fa0ef5f53c24528b457a <br>
+                                    <td>
+                                      Opioid_Overdoses_03082022.tsv <br>
+                                      (1) buprenorphine-and-methadone-during-covid-19-data-020222.xlsx <br>
+                                      (2) covid-19-state-medicaid-waivers-data-020222.xlsx <br>
+                                      (3) covid-19-moud-at-state-correctional-facilities-data-020222.xlsx <br>
+                                    </td>
+                                    <td>
+                                      Python
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                      Rates Of Opioid Overdose Deaths And COVID-19 In 2020
+                                    </td>
+                                    <td>
+                                      CDC Wide-ranging Online Data for Epidemiologic Research (CDC WONDER) <br>
+                                      COVID-19 Data Repository by the Center for Systems Science and Engineering (CSSE) at Johns Hopkins University
+                                    </td>
+                                    <td>
+                                      cdcwonder <br>
+                                      csse
+                                    </td>
+                                    <td>
+                                      Opioid_Overdoses_03082022.tsv <br>
+                                      United_States_COVID-19_Cases_and_Deaths_by_State_over_Time.csv
+                                    </td>
+                                    <td>
+                                      Python
+                                    </td>
+                                </tr>
+
                             </table>
 
 
@@ -1829,10 +1872,10 @@
                                 <li>
                                     <span style="font-weight: bold;">Do I need to store my data in a particular
                                         location to participate in the HEAL platform? </span><br><br> You must store your data in a HEAL-approved repository. A HEAL-approved repository is a data repository that is
-                                    NIH-approved and ideally has an API for metadata and data permissions calls. 
-                                    <br><br> To help HEAL investigators in the repository selection process, the HEAL Data Stewards at RENCI/RTI have developed <a href="https://healdatafair.org/resources/guidance/selection">Repository Selection Criteria</a> and identified a number of recommended repositories. 
+                                    NIH-approved and ideally has an API for metadata and data permissions calls.
+                                    <br><br> To help HEAL investigators in the repository selection process, the HEAL Data Stewards at RENCI/RTI have developed <a href="https://healdatafair.org/resources/guidance/selection">Repository Selection Criteria</a> and identified a number of recommended repositories.
                                     <br></br> If you have questions regarding costs associated with data storage in HEAL-approved repositories, please contact the <a href="mailto:HEALstewards@renci.org">HEAL Data Stewards</a>. <br></br>
-                                </li>                                
+                                </li>
                                 <li>
                                     <span style="font-weight: bold;">How and where can I see if I have access to a
                                         study? </span><br><br> Clicking on an individual study on the Discovery Page will show in the top right corner if they are accessible to the user. To see all studies users have
