feat add images to va doc

--- a/qa-mickey.planx-pla.net/dashboard/Public/documentation/index.html
+++ b/qa-mickey.planx-pla.net/dashboard/Public/documentation/index.html
@@ -204,27 +204,22 @@ responsible for the content).</p>
 vocabulary and selecting the set of terms for your analyses. Here you
 select all concepts (variables) that you would like to use for criteria
 that define your study population cohort.</p>
-<!---
-[Note - Insert image form slide 10 here]: #
---><p>Select Concept Sets in the menu and click the blue box for “New Concept
+<img alt="_images/Image_from_slide_10.png" src="_images/Image_from_slide_10.png" />
+<p>Select Concept Sets in the menu and click the blue box for “New Concept
 Set”.</p>
-<!---
-[Note - Insert image form slide 11 here]: #
---><p>In the box above the tabs, enter a name for the Concept Set you are
+<img alt="_images/Image_from_slide_11.png" src="_images/Image_from_slide_11.png" />
+<p>In the box above the tabs, enter a name for the Concept Set you are
 creating.</p>
 <p>Click the green box “Add concepts” to view the list of concept
 variables.</p>
-<!---
-[Note - Insert image form slide 13 here]: #
---><p>Enter the concept name or code into the search bar to find relevant
+<img alt="_images/Image_from_slide_13.png" src="_images/Image_from_slide_13.png" />
+<p>Enter the concept name or code into the search bar to find relevant
 concept variables.</p>
-<!---
-[Note - Insert image from slide 14 here]: #
---><p>Select desired concepts, click “Add To Concept Set”, then click “Concept
+<img alt="_images/Image_from_slide_14.png" src="_images/Image_from_slide_14.png" />
+<p>Select desired concepts, click “Add To Concept Set”, then click “Concept
 Sets”.</p>
-<!---
-[Note - Insert image from slide 15 here]: #
---><p>Make sure all desired concepts are included, then click the save icon to
+<img alt="_images/Image_from_slide_15.png" src="_images/Image_from_slide_15.png" />
+<p>Make sure all desired concepts are included, then click the save icon to
 the right of the name of the Concept Set.</p>
 <p><strong>Step 2 Create Cohort Definition</strong></p>
 <p>A cohort is a set of persons who satisfy one or more inclusion criteria
@@ -233,33 +228,26 @@ for a duration of time.</p>
 defining the study population cohort. A cohort is defined as a Person
 with an entry and exit date. Thus, a person can be in a cohort multiple
 times if they meet the criteria.</p>
-<!---
-[Note - Insert image from slide 17 here]: #
---><p>Select “Cohort Definitions” in the menu, you can begin to create a
+<img alt="_images/Image_from_slide_17.png" src="_images/Image_from_slide_17.png" />
+<p>Select “Cohort Definitions” in the menu, you can begin to create a
 cohort by clicking the “New Cohort” button.</p>
-<!---
-[Note - Insert image from slide 18 here]: #
---><p>In the boxes above and below the tabs, enter a name and description for
+<img alt="_images/Image_from_slide_18.png" src="_images/Image_from_slide_18.png" />
+<p>In the boxes above and below the tabs, enter a name and description for
 the Cohort.</p>
-<!---
-[Note - Insert image from slide 19 here]: #
---><p>To establish the duration for your cohort, click “+ Add Initial Event”,
+<img alt="_images/Image_from_slide_19.png" src="_images/Image_from_slide_19.png" />
+<p>To establish the duration for your cohort, click “+ Add Initial Event”,
 then in the dropdown menu click “Add Observation”.</p>
-<!---
-[Note - Insert image from slide 20 here]: #
---><p>Click the blue box “Any Observation”, select “Import Concept Set” from
+<img alt="_images/Image_from_slide_20.png" src="_images/Image_from_slide_20.png" />
+<p>Click the blue box “Any Observation”, select “Import Concept Set” from
 the dropdown menu.</p>
-<!---
-[Note - Insert image from slide 21 here]: #
---><p>Select the Concept Set you just made. This establishes your Concept Set
+<img alt="_images/Image_from_slide_21.png" src="_images/Image_from_slide_21.png" />
+<p>Select the Concept Set you just made. This establishes your Concept Set
 as inclusion criteria for your cohort.</p>
-<!---
-[Note - Insert image from slide 22 here]: #
---><p>To access the table in the MVP harmonization database, click “+ Add
+<img alt="_images/Image_from_slide_22.png" src="_images/Image_from_slide_22.png" />
+<p>To access the table in the MVP harmonization database, click “+ Add
 attribute…”, then click “Add Value as Number Criteria”.</p>
-<!---
-[Note - Insert image from slide 23 here]: #
---><p>Select “Greater or Equal To” and enter 2. This will allow for the
+<img alt="_images/Image_from_slide_23.png" src="_images/Image_from_slide_23.png" />
+<p>Select “Greater or Equal To” and enter 2. This will allow for the
 collection of data from the Observation table of the MVP harmonization
 database.</p>
 <p>If you would like to add additional inclusion criteria, click “New
@@ -270,9 +258,8 @@ complete the Cohort Definition, click the green Save icon.</p>
 subsequent analyses. Use the cohort definition to identify how many
 people are in the cohort. This is the initial number that will be used
 in the GWAS app when this cohort is selected.</p>
-<!---
-[Note - Insert image from slide 26 here]: #
---><p>To complete the creation of the Cohort Definition, click “Generation”,
+<img alt="_images/Image_from_slide_26.png" src="_images/Image_from_slide_26.png" />
+<p>To complete the creation of the Cohort Definition, click “Generation”,
 then “Generate”.</p>
 <p>Cohort size will be displayed. Use View Reports to see if you have
 inclusion criteria that causes cohort attrition.</p>
