--- a/qa.planx-pla.net/dashboard/Secure/qa-reports/index.html
+++ b/qa.planx-pla.net/dashboard/Secure/qa-reports/index.html
@@ -30,6 +30,7 @@
                     <li class="qrtrFltr"><a href="#">Q1 2023</a></li>
                     <li class="qrtrFltr"><a href="#">Q4 2022</a></li>
                     <li class="qrtrFltr"><a href="#">Q3 2022</a></li>
+                    <li class="qrtrFltr"><a href="#">Q2 2022</a></li>
                     <li class="qrtrFltr"><a href="#">Q1 2022</a></li>
                     <li class="qrtrFltr"><a href="#">Q4 2021</a></li>
                     <li class="qrtrFltr"><a href="#">Q3 2021</a></li>
