--- a/qa.planx-pla.net/dashboard/Secure/qa-reports/index.html
+++ b/qa.planx-pla.net/dashboard/Secure/qa-reports/index.html
@@ -27,6 +27,10 @@
                 <h2 class="star">Filter by date</h2>
                 <div class="clr"></div>
                 <ul class="sb_menu">
+                    <li class="qrtrFltr"><a href="#">Q1 2023</a></li>
+                    <li class="qrtrFltr"><a href="#">Q4 2022</a></li>
+                    <li class="qrtrFltr"><a href="#">Q3 2022</a></li>
+                    <li class="qrtrFltr"><a href="#">Q2 2022</a></li>
                     <li class="qrtrFltr"><a href="#">Q1 2022</a></li>
                     <li class="qrtrFltr"><a href="#">Q4 2021</a></li>
                     <li class="qrtrFltr"><a href="#">Q3 2021</a></li>
