update qa-brh static notebooks

--- a/qa-brh.planx-pla.net/dashboard/Public/notebooks/How_to_access_data.html
+++ b/qa-brh.planx-pla.net/dashboard/Public/notebooks/How_to_access_data.html
@@ -13979,6 +13979,9 @@ a.anchor-link {
 <li>Download zip files using Gen3 SDK</li>
 <li>Using the gen3 SDK and GraphQL to explore data in a project (API)</li>
 </ol>
+<ul>
+    <li> This notebook only exists on the BRH Example Analysis page and is not in the BRH Workspace Tutorials.</li>
+</ul>
 <h1 id="1.-Using-a-downloaded-manifest.json-(Manifest-method)">1. Using a downloaded manifest.json (Manifest method)<a class="anchor-link" href="#1.-Using-a-downloaded-manifest.json-(Manifest-method)">&#182;</a></h1><h2 id="Objective">Objective<a class="anchor-link" href="#Objective">&#182;</a></h2><p>Bring in open access JCOIN study "OEPS" into this notebook using a manifest file</p>
 <h2 id="Pre-requisite">Pre-requisite<a class="anchor-link" href="#Pre-requisite">&#182;</a></h2><ol>
 <li>JCOIN Data Commons is Linked in the <a href="https://brh.data-commons.org/identity">BRH Profile Page</a></li>
