Teams Doc Changes

--- a/qa-mickey.planx-pla.net/dashboard/Public/documentation/index.html
+++ b/qa-mickey.planx-pla.net/dashboard/Public/documentation/index.html
@@ -142,12 +142,12 @@ Commons</a>.</p>
 option of four apps: OHDSI Atlas, Gen3 GWAS, GWAS Results and Data
 Dictionary. Using these Apps, a user may perform a genomic analysis on
 available data from projects that they have access to.</p>
-<p>Navigating into Apps will will result in a pop up window requiring the
-user to select a ‘Team project’. Once selected, the user will see the
-Team project name in the upper right of all Apps pages and will have
-access to all team cohorts, GWAS runs and results. Note that only the
-shared objects of the selected team are accessible. If there is a need
-to create or access items for a different team, you will need to
+<p>Navigating into Apps for the first time will result in a pop up window
+requiring the user to select a ‘Team project’. Once selected, the user
+will see the Team project name in the upper right of all Apps pages and
+will have access to all team cohorts, GWAS runs and results. Note that
+only the shared objects of the selected team are accessible. If there is
+a need to create or access items for a different team, you will need to
 navigate back to the Apps page and make that selection.</p>
 </section>
 <section id="ohdsi-atlas">
